--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
     <h1>readme</h1>
     <p>
@@ -91,7 +91,7 @@
 		God bless
 	</p> -->
 
-</article>
+</main>
 
 </body>
 </html>
