--- a/blender.html
+++ b/blender.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1 style="margin-bottom: 0;">Blender Workshop links</h1>
 	
@@ -73,7 +73,7 @@
 	
 	
 
-</article>
+</main>
 
 </body>
 </html>
