--- a/index.html
+++ b/index.html
@@ -15,19 +15,14 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
-<h1>portfolio</h1>
-<h3>Hey! The site is a bit out of date at the moment. I'm working on updating it :)</h3>
-
-<!-- 	<h1 style = "margin-bottom:20px;">julian triveri</h1> -->
-	
     <div class="circlesPacked">
 
         <a class="packedCircle" href="/portfolio/virtuallab.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				nuclear engineering virtual education
 			</div>
         </a>
@@ -35,7 +30,7 @@
 		<a class="packedCircle" href="https://anagly.ph/" target="_blank">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				mixed reality laser tag
 			</div>
         </a>
@@ -43,7 +38,7 @@
 		<a class="packedCircle" href="/portfolio/courthouse.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				projected motion graphics
 			</div>
         </a>
@@ -51,7 +46,7 @@
 		<a class="packedCircle" href="/portfolio/surveymeter.html">
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				mixed reality nuclear pharmacy education
 			</div>
         </a>
@@ -59,7 +54,7 @@
 		<a class="packedCircle" href="/portfolio/mocap.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/mocap/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				VR + motion capture prototype
 			</div>
 		</a>
@@ -67,7 +62,7 @@
 		<a class="packedCircle" href="/portfolio/lasso.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				VR lasso game-jam
 			</div>
         </a>
@@ -75,7 +70,7 @@
         <a class="packedCircle" href="/portfolio/snowman.html">
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				work-in-progress animated shorts
 			</div>
         </a>
@@ -83,14 +78,14 @@
 		<a class="packedCircle" href="/portfolio/dioramas.html">
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
 			
-			<div class="thumbnail thumbtext">
+			<div class="thumbtext">
 				light baking studies
 			</div>
         </a>
         
     </div>
 
-</article>
+</main>
 
 </body>
 </html>
