--- a/more.html
+++ b/more.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1 style="margin-bottom: 0;">misc</h1>
 	
@@ -34,7 +34,7 @@
 		</a>
 	</ul>
 
-</article>
+</main>
 
 </body>
 </html>
