--- a/portfolio/cgt321.html
+++ b/portfolio/cgt321.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1 style="margin-bottom: 0;">cgt321 portfolio</h1>
 	<br>
@@ -63,7 +63,7 @@
 	<br>
 	<br>
 
-</article>
+</main>
 
 </body>
 </html>
