--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1>projected motion graphics</h1>
 	<h3>
@@ -47,7 +47,7 @@
 		Completed Summer 2022
 	</p>
 
-</article>
+</main>
 
 </body>
 </html>
