--- a/portfolio/dioramas.html
+++ b/portfolio/dioramas.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1>light baking studies</h1>
 	<h3>
@@ -48,7 +48,7 @@
 		</iframe>
 	</div>
 
-</article>
+</main>
 
 </body>
 </html>
