--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1>mixed reality lasertag prototype</h1>
 	<h3>
@@ -114,7 +114,7 @@
 		for testing and troubleshooting!
 	</p>
 
-</article>
+</main>
 
 </body>
 </html>
