--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1>global game jam 2024</h1>
 	<h3>
@@ -104,7 +104,7 @@
 		Completed early 2024
 	</p>
 	
-</article>
+</main>
 
 </body>
 </html>
