--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1>VR + mocap prototype</h1>
 	
@@ -102,7 +102,7 @@
 			Unity standard asset</a>.
 	</p>
 
-</article>
+</main>
 
 </body>
 </html>
