--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article style="position:relative;">
+<main style="position:relative;">
 
 	<h1>animations</h1>
 	<h3>
@@ -54,7 +54,7 @@
 
 	<script src="https://player.vimeo.com/api/player.js"></script>
 
-</article>
+</main>
 
 </body>
 </html>
