--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -15,7 +15,7 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1>nuclear pharmacy<br>safety training prototype</h1>
 	<h3>
@@ -43,7 +43,7 @@
 	<a href="surveymeter/meter.jpg" style="display:inline-block; max-width:50%; float:left;"><img src="surveymeter/meter.jpg"></a>
 	<a href="surveymeter/wiremeter.png" style="display:inline-block; max-width:50%; float:left;"><img src="surveymeter/wiremeter.png"></a>
 
-</article>
+</main>
 
 </body>
 </html>
