--- a/template.html
+++ b/template.html
@@ -14,14 +14,14 @@
 <a href="/mobilenav.html" id="navmobile"> Menu </a>
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
-<article>
+<main>
 
 	<h1>Template</h1>
 
 	<h2>Change this!</h2>
 	<p>Blah blah blah</p>
 
-</article>
+</main>
 
 </body>
 </html>
