--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
         </a>
 		
-		<a class="packedCircle" href="https://anagly.ph/" target="_blank">
+		<a class="packedCircle" href="/portfolio/lasertag.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
 			
 			<div class="thumbtext">
