--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -38,8 +38,8 @@
 	<p>
 		This is a virtual lab for nuclear engineering undergrads.
 		I'm responsible for the design, artwork, and scripting;
-		built in Unity with visuals made in 
-		Blender, Marmoset Toolbag, Substance Painter, and Affinity Designer.
+		I built it on Unity with visuals done in  
+		Blender, Marmoset Toolbag, and Substance Painter.
 	</p>
 	<p>
 		Purdue University Prof. Stylianos Chatzidakis led this project to increase
