--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -190,7 +190,7 @@
 		
 		<li><a href="https://www.purduehackers.com" target="_blank">
 		Purdue Hackers</a> and its members. Super helpful with
-		playtesters and a source of free snacks. 
+		playstesting and a great place to hang out. 
 		
 		<li>Ernesto, who drew several blaster designs that I need to finish
 		as 3D models.
