--- a/resources/nav.html
+++ b/resources/nav.html
@@ -23,14 +23,19 @@
 			<ul style="font-size:18px; padding-top:20px;">
 				<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
 					twitter</a>
+				<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
+					bluesky</a>
 				<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
 					github</a>
 				<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
 					sketchfab</a>
 				<li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
 					linkedin</a>
+				<li><a href="https://www.youtube.com/@trev3d/videos" target="_blank" rel="noopener noreferrer">
+					youtube</a>
 
-<!-- 				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m -->
+				<p>
+ 				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m
 			</ul>
 			
 		</nav>
