--- a/more.html
+++ b/more.html
@@ -19,7 +19,7 @@
 
 	<h1 style="margin-bottom: 0;">misc</h1>
 	
-	<ul style="font-family:title;">
+	<ul style="">
 		<li><a href="/portfolio/cgt321.html">
 			Illustrations for a class >>>
 		</a>
@@ -31,6 +31,9 @@
 		</a>
 		<li><a href="https://www.youtube.com/@trev3d/videos" target="_blank">
 			Youtube >>>
+		</a>
+		<li><a href="https://sketchfab.com/trev3d" target="_blank">
+			Sketchfab >>>
 		</a>
 	</ul>
 
