--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -26,7 +26,7 @@
 		<img class="software-icon" src="/resources/icons/git.png">
 	</h3>
 	
-	<div class="webvid verticalvid">
+	<div class="webvid verticalvid" style="padding:70.3125% 0 0 0;">
 		<iframe src="https://player.vimeo.com/video/1048179602
 		?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 		allow="autoplay; fullscreen; picture-in-picture" 
@@ -51,14 +51,10 @@
 		here >>>
 		</a>
 		
-	<h2>simple setup</h2>
-	
-	<p>
-		In order to play, players must do the following:
-	
+	<h2>setup</h2>
 	<ul>
 		<li>1. Everyone puts on their headset
-		<li>2. Everyone connects to the same wifi network
+		<li>2. Everyone connects to the same WiFi network
 		<li>3. Everyone launches the app
 		<li>4. One person presses the 'host' button
 	</ul>
@@ -76,8 +72,9 @@
 	</div>
 		
 	<p>
-		The app uses Quest's depth estimation to progressively and
-		collectively map the playspace for laser collision via compute kernels.
+		The app uses Quest's depth estimation to progressively
+		map the playspace (rooms, walls, furniture, etc)
+		for laser collision via compute kernels.
 		Headsets stream their scans to other headsets and they all
 		add to a shared heightmap.
 		
@@ -105,9 +102,6 @@
 		and I still need to optimize them.
 		
 	<h2 id="known_issues">known issues</h2>
-	
-	<p>
-		The game still has many problems I need to solve:
 	
 	<ul>
 		<li>Headsets must be on the same subnet to connect.
