--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -57,9 +57,9 @@
 	</div>
 	
 	<p>
-		<a style="font-family:title;" href="virtuallab/tbexport.html" target="_blank">
+		<h3><a href="virtuallab/tbexport.html" target="_blank">
 			Fullscreen >>>
-		</a>
+		</a></h3>
 	</p>
 	
 	<a href="virtuallab/real.jpg" target="_blank"><img src="virtuallab/real.jpg"></a>
@@ -143,7 +143,8 @@
 	
 	<p>
 		For cable physics I use
-		<a href="http://obi.virtualmethodstudio.com/" target="_blank">Obi Rope</a>.
+		<a href="http://obi.virtualmethodstudio.com/" target="_blank">
+		Obi Rope >>></a>.
 		My Obi settings are tuned for a decent balance between visual quality and performance.
 	</p>
 	
