--- a/resources/nav.html
+++ b/resources/nav.html
@@ -13,26 +13,26 @@
 				<img src="/resources/dog.svg" style="width: auto; height: auto; margin: 10px;" alt="home">
 			</a>
 
-			<ul>
+			<ul style="text-align: right;">
 				<li><a href="/index.html" target="_top">home</a></li>
 				<li><a href="/about.html" target="_top">about</a></li>
 				<!-- <li><a href="/blog.html" target="_top">misc</a></li> -->
 				<li><a href="/more.html" target="_top">misc</a></li>
 			</ul>
 
-			<ul style="font-size:18px; padding-top:20px;">
-				<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
-					twitter</a>
+			<ul style="font-size:15px; padding-top:20px; text-align: right;">
 				<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
-					bluesky</a>
+					bluesky >>></a>
+				<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
+					twitter >>></a>
 				<li><a href="https://github.com/trev3d" target="_blank" rel="noopener noreferrer">
-					github</a>
-				<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
-					sketchfab</a>
+					github >>></a>
+				<!-- <li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
+					sketchfab</a> -->
 				<li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
-					linkedin</a>
-				<li><a href="https://www.youtube.com/@trev3d/videos" target="_blank" rel="noopener noreferrer">
-					youtube</a>
+					linkedin >>></a>
+				<!-- <li><a href="https://www.youtube.com/@trev3d/videos" target="_blank" rel="noopener noreferrer">
+					youtube</a> -->
 
 				<p>
  				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m
