--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
 			
 			<div class="thumbtext">
-				mixed reality laser tag
+				mixed reality<br>laser tag
 			</div>
         </a>
         
@@ -57,28 +57,12 @@
 				VR + motion capture prototype
 			</div>
 		</a>
-		
-		<a class="packedCircle" href="/portfolio/lasso.html">
-			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
-			
-			<div class="thumbtext">
-				VR lasso game-jam
-			</div>
-        </a>
 
         <a class="packedCircle" href="/portfolio/snowman.html">
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
 			
 			<div class="thumbtext">
 				work-in-progress animated shorts
-			</div>
-        </a>
-		
-		<a class="packedCircle" href="/portfolio/dioramas.html">
-            <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
-			
-			<div class="thumbtext">
-				light baking studies
 			</div>
         </a>
         
