--- a/more.html
+++ b/more.html
@@ -36,6 +36,26 @@
 			Sketchfab >>>
 		</a>
 	</ul>
+	
+	<div class="circlesPacked">
+		
+		<a class="packedCircle" href="/portfolio/lasso.html">
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
+			
+			<div class="thumbtext">
+				VR lasso<br>game-jam
+			</div>
+        </a>
+		
+		<a class="packedCircle" href="/portfolio/dioramas.html">
+            <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/dioramas/thumb.mp4"></video>
+			
+			<div class="thumbtext">
+				light baking studies
+			</div>
+        </a>
+        
+    </div>
 
 </main>
 
