--- a/portfolio/cgt321.html
+++ b/portfolio/cgt321.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1 style="margin-bottom: 0;">cgt321 portfolio</h1>
+	<h1 style="margin-bottom: 0;">CGT321 portfolio</h1>
 	<br>
 	
 	<a href="cgt321/still.png" target="_blank">
