--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1>projected motion graphics</h1>
+	<h1>Projection-mapped motion graphics</h1>
 	<h3>
 		Custom motion graphics projected onto a courthouse facade.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
