--- a/portfolio/dioramas.html
+++ b/portfolio/dioramas.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1>light baking studies</h1>
+	<h1>Light baking studies</h1>
 	<h3>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
