--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1>xr laser tag</h1>
+	<h1>Mixed reality laser tag</h1>
 	<h3>
 		Turn any space into a laser tag arena with a single press<br>
 
@@ -32,8 +32,6 @@
 		allow="autoplay; fullscreen; picture-in-picture" 
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
-	
-	<h2>tl;dr</h2>
 	
 	<p>
 		<i>Lasertag</i> (one word) is an experiment in reducing the friction
@@ -51,7 +49,7 @@
 		here >>>
 		</a>
 		
-	<h2>setup</h2>
+	<h2>Simple setup</h2>
 	<ul>
 		<li>1. Everyone puts on their headset
 		<li>2. Everyone connects to the same WiFi network
@@ -63,7 +61,8 @@
 		From there, all nearby headsets (should) connect and colocate automatically.
 		Limitations are detailed in '<a href="#known_issues">known issues</a>.'
 		
-	<h2>progressive network-synced environment mapping</h2>
+	<h2>Room mapping</h2>
+	<h3>Progressive and network-synced</h3>
 			
 	<div class="webvid">
 		<iframe src="https://www.youtube.com/embed/oJ_fFONAEQ4"
@@ -84,7 +83,7 @@
 		will stream its scan.
 
 		
-	<h2>depth lighting</h2>
+	<h2>Depth lighting</h2>
 	
 	<div class="webvid">
 		<iframe src="https://www.youtube.com/embed/yxDhCg-q0JU?t=26s"
@@ -101,9 +100,10 @@
 		(alpha blended fragments that often overlap and cover the whole view)
 		and I still need to optimize them.
 		
-	<h2 id="known_issues">known issues</h2>
+	<h2 id="known_issues">Known issues</h2>
 	
 	<ul>
+		<li>Moving too far will interrupt the game with a system pop-up.
 		<li>Headsets must be on the same subnet to connect.
 		<li>Meta's shared anchors are finicky and often fail.
 		<li>Players' virtual avatars will drift and dislocate
@@ -117,7 +117,7 @@
 		<li>All of the visuals are placeholders.
 	</ul>
 		
-	<h2>download</h2>
+	<h2>Download</h2>
 	
 	<p>
 		The game is still pretty bare-bones. 
@@ -142,7 +142,7 @@
 		The project is available on GitHub under the MIT license.
 		Feel free to reference (or steal) code for your own projects :)
 		
-	<h2>special thanks</h2>
+	<h2>Special thanks</h2>
 	
 	<ul>
 	
