--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1>global game jam 2024</h1>
+	<h1>Global game jam 2024</h1>
 	<h3>
 		A clown-wrangling VR game made in 48 hours by a team of 3.
 		<br>
@@ -35,8 +35,6 @@
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
 	
-	<h2>tl;dr</h2>
-	
 	<p>
 		I was responsible for the lasso manipulation & interaction as well as the environment graphics.
 		Made together with 
@@ -51,7 +49,7 @@
 		The goal is to wrangle in antagonistic clowns with your trusty lasso.
 	</p>
 	
-	<h2>lasso interaction</h2>
+	<h2>Lasso interaction</h2>
 	
 	<p>
 		Given the jam time constraint, 
@@ -75,7 +73,7 @@
 		and its fun to hear it whiz around your head.
 	</p>
 	
-	<h2>environment</h2>
+	<h2>Environment</h2>
 	
 	<a href="lasso/scene.png" target="_blank"><img src="lasso/scene.png"></a>
 	
@@ -92,7 +90,7 @@
 		crisp 3000x3000+ resolution, much higher than default.
 	</p>
 	
-	<h2>download &amp; source</h2>
+	<h2>Download &amp; source</h2>
 	<p>
 		You can download the game for Oculus Quest from  
 		<a href="https://github.com/Clownboys/lasso">Github</a> or 
