--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -34,8 +34,6 @@
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 			allowfullscreen></iframe>
 	</div>
-	
-	<h2>tl;dr</h2>
 	<p>
 		This is a prototype VR game where
 		two players fight with foam swords on a motion capture stage.
@@ -52,7 +50,7 @@
 	<blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">I work with some pretty awesome people. VR light saber battles at the <a href="https://twitter.com/PurdueRCAC?ref_src=twsrc%5Etfw">@PurdueRCAC</a> Envision Center 20th anniversary open house today 🤖 ⚔️ <br><br>Best use of PVC pipe and pool noodles that I’ve ever seen, but the VR goggles and mocap suit obviously take it to a whole other level 👌🏼 <a href="https://t.co/jqHgVm2TUJ">pic.twitter.com/jqHgVm2TUJ</a></p>&mdash; Paul Branham (@BoilerPaulie) <a href="https://twitter.com/BoilerPaulie/status/1780627497240895618?ref_src=twsrc%5Etfw">April 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
 	
-	<h2>tracking &amp; calibration</h2>
+	<h2>Tracking &amp; calibration</h2>
 	
 	<a href="mocap/fight.jpg" target="_blank"><img src="mocap/fight.jpg"></a>
 	
@@ -76,13 +74,13 @@
 		The headset is responsible for its own tracking from then on.
 	</p>
 	
-	<h2>visuals</h2>
+	<h2>Visuals</h2>
 	
 	<a href="mocap/snapshot1.png" target="_blank"><img src="mocap/snapshot1.png"></a>
 	
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
 	
-	<h2>thanks</h2>
+	<h2>Thanks</h2>
 	<p>
 		I'd like to thank my friends 
 		<a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
