--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -17,7 +17,7 @@
 
 <main style="position:relative;">
 
-	<h1>animations</h1>
+	<h1>Animations</h1>
 	<h3>
 		Fragments from work-in-progress projects.<br>
 		<img class="software-icon" src="/resources/icons/blender.png">
