--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -17,7 +17,7 @@
 
 <main>
 
-	<h1>nuclear pharmacy<br>safety training prototype</h1>
+	<h1>Nuclear pharmacy<br>safety training prototype</h1>
 	<h3>
 		A prototype augmented reality program for technique-based training.<br>
 		<img class="software-icon" src="/resources/icons/unity.png">
