--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -16,9 +16,10 @@
 <iframe id="navframe" src="/resources/nav.html"></iframe>
 
 <main>
-	<h1>nuclear engineering<br>virtual education</h1>
+	<h1>Nuclear engineering<br>virtual education</h1>
 	<h3>
-		Built in Unity. Responsible for artwork and programming.<br>
+		Use highly-detailed simulations of nuclear survey equipment 
+		in your web browser.<br>
 	
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
@@ -34,7 +35,6 @@
 	</div>
 			
 	<script src="https://player.vimeo.com/api/player.js"></script>
-	<h2>tl;dr</h2>
 	<p>
 		This is a virtual lab for nuclear engineering undergrads.
 		I'm responsible for the design, artwork, and scripting;
@@ -97,7 +97,7 @@
 	<a href="virtuallab/HVS.png" target="_blank"><img src="virtuallab/HVS.png"></a>
 	<a href="virtuallab/amp sca.png" target="_blank"><img src="virtuallab/amp sca.png"></a>
 	
-	<h2>programming</h2>
+	<h2>Programming</h2>
 	
 	<a href="virtuallab/editor2.png" target="_blank"><img src="virtuallab/editor2.png"></a>
 	
@@ -107,7 +107,7 @@
 		Like the visuals, everything is optimized for low-spec devices.
 	</p>
 	
-	<h2>signal processing &amp; equipment simulation</h2>
+	<h2>Signal processing &amp; equipment simulation</h2>
 	
 	<p>
 		Each appliance is functional and 
@@ -139,7 +139,7 @@
 	
 	
 	
-	<h2>cable visuals (obi rope)</h2>
+	<h2>Cable visuals (obi rope)</h2>
 	
 	<p>
 		For cable physics I use
@@ -170,7 +170,7 @@
 		
 	
 	
-	<h2>user experience</h2>
+	<h2>User experience</h2>
 	
 	<p>
 		The user must not be allowed to lose draggable objects 
