--- a/resources/nav.html
+++ b/resources/nav.html
@@ -20,7 +20,7 @@
 				<li><a href="/more.html" target="_top">misc</a></li>
 			</ul>
 
-			<ul style="font-size:15px; padding-top:20px; text-align: right;">
+			<ul style="font-size:0.6em; padding-top:15px; text-align: right; font-family:body;">
 				<li><a href="https://bsky.app/profile/trev3d.com" target="_blank" rel="noopener noreferrer">
 					bluesky >>></a>
 				<li><a href="https://twitter.com/trev3d" target="_blank" rel="noopener noreferrer">
@@ -35,7 +35,7 @@
 					youtube</a> -->
 
 				<p>
- 				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m
+ 				<li style="font-size: 0.8em;">triveri at outlook dot com
 			</ul>
 			
 		</nav>
