--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -19,7 +19,8 @@
 
 	<h1>Projection-mapped motion graphics</h1>
 	<h3>
-		Custom motion graphics projected onto a courthouse facade.<br>
+		Custom motion graphics projected onto a courthouse facade.
+		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 	</h3>
 	
