--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -19,15 +19,15 @@
 
 	<h1>Mixed reality laser tag</h1>
 	<h3>
-		Turn any space into a laser tag arena with a single press<br>
-
+		Turn any space into a laser tag arena with a single press
+		<p>
 		<img class="software-icon" src="/resources/icons/meta.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/git.png">
 	</h3>
 	
 	<div class="webvid verticalvid" style="padding:70.3125% 0 0 0;">
-		<iframe src="https://player.vimeo.com/video/1048179602
+		<iframe src="https://player.vimeo.com/video/1050839856
 		?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 		allow="autoplay; fullscreen; picture-in-picture" 
 		style = "height:100%;"allowfullscreen></iframe>
