--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -20,7 +20,8 @@
 	<h1>VR + mocap prototype</h1>
 	
 	<h3>
-		Combining VR and full-body motion capture for highly physical (and slightly dangerous) VR games.<br>
+		Combining VR and full-body motion capture for highly physical (and slightly dangerous) VR games.
+		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/motive.png">
