--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -19,7 +19,8 @@
 
 	<h1>Nuclear pharmacy<br>safety training prototype</h1>
 	<h3>
-		A prototype augmented reality program for technique-based training.<br>
+		A prototype augmented reality program for technique-based training.
+		<p>
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
