--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -19,8 +19,8 @@
 	<h1>Nuclear engineering<br>virtual education</h1>
 	<h3>
 		Use highly-detailed simulations of nuclear survey equipment 
-		in your web browser.<br>
-	
+		in your web browser.
+		<p>
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/marmoset.png">
