--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -38,16 +38,19 @@
 		of mixed reality games with something that 'just works.'
 		
 	<p>
-		It requires little prior setup, progressively scans and syncs room geometry
-		between all players over the network, 
+		It requires little prior setup, 
+		progressively scans and syncs room geometry between all players, 
 		and connects nearby headsets automatically.
 		
 	<p>
 		The game runs on Meta Quest 3/3s and is built on Unity using their
-		first-party Netcode for GameObjects package. You can try the game 
+		first-party Netcode for GameObjects package.
+	<p>
+	<h3>
 		<a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
-		here >>>
+			Download >>>
 		</a>
+	</h3>
 		
 	<h2>Simple setup</h2>
 	<ul>
