--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -30,7 +30,8 @@
 	
 	
 	<div class="webvid verticalvid">
-		<iframe src="https://player.vimeo.com/video/914606490?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+		<iframe src="https://player.vimeo.com/video/914606490?h=dddc621
+		&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
 		allow="autoplay; fullscreen; picture-in-picture" 
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
