--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -28,7 +28,7 @@
 	
 	<div class="webvid verticalvid" style="padding:70.3125% 0 0 0;">
 		<iframe src="https://player.vimeo.com/video/1050839856
-		?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+		?h=dddc621&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
 		allow="autoplay; fullscreen; picture-in-picture" 
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
