--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -29,7 +29,8 @@
 
 	<div class="webvid">
 		<iframe 
-			src="https://player.vimeo.com/video/822188345?h=66eadcb174&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+			src="https://player.vimeo.com/video/822188345?h=66eadcb174
+			&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<p>
