--- a/resources/nav.html
+++ b/resources/nav.html
@@ -17,7 +17,7 @@
 				<li><a href="/index.html" target="_top">home</a></li>
 				<li><a href="/about.html" target="_top">about</a></li>
 				<!-- <li><a href="/blog.html" target="_top">misc</a></li> -->
-				<li><a href="/more.html" target="_top">misc</a></li>
+				<li><a href="/more.html" target="_top">more</a></li>
 			</ul>
 
 			<ul style="font-size:0.6em; padding-top:15px; text-align: right; font-family:body;">
